--- a/manifest.json
+++ b/manifest.json
@@ -3,17 +3,17 @@
   "name": "Datum Calculator",
   "icons": [
     {
-      "src": "images/001-compass.png",
+      "src": "images/desl-logo.png",
       "type": "image/png",
       "sizes": "128x128"
     },
     {
-      "src": "images/001-compass.png",
+      "src": "images/desl-logo.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "images/001-compass.png",
+      "src": "images/desl-logo.png",
       "type": "image/png",
       "sizes": "512x512"
     }
