--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
       "sizes": "128x128"
     },
     {
-      "src": "images/desl-logo.png",
+      "src": "images/001-compass.png",
       "type": "image/png",
       "sizes": "192x192"
     },
